feat: Drag events and complex paths

--- a/motionlayout-start/app/src/main/res/xml/step7.xml
+++ b/motionlayout-start/app/src/main/res/xml/step7.xml
@@ -24,10 +24,11 @@
             app:constraintSetEnd="@+id/end"
             app:duration="3000">
 
-        <!-- Fix OnSwipe by changing touchAnchorSide -->
+        <!-- todo: Fix OnSwipe by changing touchAnchorSide -->
         <OnSwipe
                 app:touchAnchorId="@id/moon"
-                app:touchAnchorSide="bottom"
+                app:touchAnchorSide="right"
+            app:dragDirection="dragRight"
         />
 
 
